src/tests/testfiles/variable-declarations/14.txt
testfiles/variable-declarations/14.c:2:11: error: incompatible types when initializing type 'float' using type 'char []'
float a = {"a"};
      ^
